- stardict parser
- sdict: --parser-option "remove-duplication=yes" to fix broken rus_bse
dictionary
- introduce new scheme of parser<->generator cooperation to speedup makedict
0.3alpha4