@@ -36,13 +36,26 @@
 #include "file.hpp"
 #include "utils.hpp"
 #include "mapfile.hpp"
+#include "xml.hpp"
 
 #include "parser.hpp"
 
 namespace stardict {
 	class DictData {
 	public:
-		bool get(guint32 off, guint32 size, std::string& data);
+		bool open(const std::string& filename);
+		bool get(guint32 off, guint32 size, std::string& data, bool& keys_in_article);
+		void set_sametypesequence(const std::string& val) {
+			sametypesequence_ = val;
+		}
+	private:
+		File data_;
+		std::string sametypesequence_;
+
+		static void convert_to_xdxf(char data_type, const char *& beg,
+					    const char *end, std::string& res,
+					    bool& keys_in_article,
+					    bool lastitem = false);
 	};
 
 	class Parser : public ParserBase {
@@ -68,8 +81,95 @@ using namespace stardict;
 
 const char *Parser::magic_ = "StarDict's dict ifo file";
 
-bool DictData::get(guint32 off, guint32 size, std::string& data)
+void DictData::convert_to_xdxf(char data_type, const char *&beg,
+			       const char *end, std::string& res,
+			       bool& keys_in_article, bool lastitem)
 {
+	size_t sec_size = 0;
+
+	if (!lastitem) {
+		if (g_ascii_isupper(data_type)) {
+			sec_size = g_ntohl(*reinterpret_cast<const guint32 *>(beg));
+			sec_size += sizeof(guint32);
+
+		} else {
+			sec_size = strlen(beg);
+		}
+	} else
+		sec_size = end - beg;
+
+	switch (data_type) {
+	case 'm': {
+		std::string tmp;
+		xml::encode(std::string(beg, sec_size), tmp);
+		res += tmp;
+	}
+		break;
+	case 't': {
+		std::string tmp;
+		xml::encode(std::string(beg, sec_size), tmp);
+		res += "<t>";
+		res += tmp;
+		res += "</t>";
+	}
+		break;
+	case 'x':
+		keys_in_article = true;
+		res.append(beg, sec_size);
+		break;
+	default:
+		//nothing
+		break;
+	}
+
+	if (!lastitem && !g_ascii_isupper(data_type))
+		++sec_size;
+
+	beg += sec_size;
+}
+
+bool DictData::get(guint32 off, guint32 size, std::string& data, bool& keys_in_article)
+{
+	data.clear();
+	keys_in_article = false;
+
+	std::vector<char> buf(size);
+	if (!data_.seek(off) || !data_.read(&buf[0], size)) {
+		g_warning(_("I/O problems: %s\n"), strerror(errno));
+		return false;
+	}
+
+	const char *p = &buf[0], *end = &buf[0] + size;
+
+	if (!sametypesequence_.empty()) {
+		std::string::size_type i;
+		for (i = 0; i < sametypesequence_.size() - 1 && p < end; ++i) {
+			convert_to_xdxf(sametypesequence_[i], p, end, data,
+					keys_in_article);
+		}
+		if (i < sametypesequence_.size() && p < end) {
+			convert_to_xdxf(sametypesequence_[i], p, end, data,
+					keys_in_article, true);
+		}
+		
+	} else {
+		while (p < end) {
+			char data_type = *p++;
+			convert_to_xdxf(data_type, p, end, data, keys_in_article);
+		}
+	}
+	return true;
+}
+
+bool DictData::open(const std::string& filename)
+{
+	data_.reset(fopen(filename.c_str(), "rb"));
+
+	if (!data_) {
+		g_warning(_("Can not open %s: %s\n"), filename.c_str(),
+			  strerror(errno));
+		return false;
+	}
 	return true;
 }
 
@@ -86,6 +186,11 @@ int Parser::parse(const std::string& filename)
 	if (!begin())
 		return EXIT_FAILURE;
 
+	std::string dict_fname = filename;
+	dict_fname.erase(dict_fname.length() - 4, 4);
+	dict_fname += ".dict";
+	if (!dict_data_.open(dict_fname))
+		return EXIT_FAILURE;
 	MapFile index;
 	std::string idx_fname = filename;
 	idx_fname.erase(idx_fname.length() - 4, 4);
@@ -95,19 +200,21 @@ int Parser::parse(const std::string& filename)
 	const char *p = index.begin(), *end = index.end(), *q;
 	guint32 off, size;
 	std::string data;
+	bool keys_in_article;
+
 	while ((q = (const char *)memchr(p, '\0', end - p)) != NULL) {
 		++q;
 		off = g_ntohl(*reinterpret_cast<const guint32 *>(q));
 		q += sizeof(guint32);
 		size = g_ntohl(*reinterpret_cast<const guint32 *>(q));
-		if (!dict_data_.get(off, size, data))
+		if (!dict_data_.get(off, size, data, keys_in_article))
 			return EXIT_FAILURE;
-		if (!article(p, data, false))
+		if (!article(p, data, keys_in_article))
 			return EXIT_FAILURE;
 		p = q + sizeof(guint32);
 	}
 
-	return EXIT_FAILURE;
+	return EXIT_SUCCESS;
 }
 
 bool Parser::parse_ifo_file(const std::string& filename)
@@ -141,7 +248,7 @@ bool Parser::parse_ifo_file(const std::string& filename)
 			return false;
 		}
 		g_info(_("Read from ifo file: %s: %s\n"), vals[0].c_str(), vals[1].c_str());
-		ifo_data[vals[0]] = vals[1];		
+		ifo_data[vals[0]] = vals[1];
 	}
 #define EXIT_IF_NOT_EXISTS(name) do { \
 		if (ifo_data.find(#name) == ifo_data.end()) { \
@@ -163,6 +270,10 @@ bool Parser::parse_ifo_file(const std::string& filename)
 	if ((it = ifo_data.find("description")) != ifo_data.end() &&
 	    !it->second.empty())
 		set_dict_info("description", it->second);
+
+	if ((it = ifo_data.find("sametypesequence")) != ifo_data.end() &&
+	    !it->second.empty())
+		dict_data_.set_sametypesequence(it->second);
 
 	return true;
 }
