@@ -16,5 +16,4 @@ dsl_transc.dsl dsl_transc_std.dummy \
 parser_options_std.xdxf \
 sample1.dct sample1_sdict_std.xdxf \
 sample2.dct sample2_sdict_std.xdxf \
-opt_nu.dsl opt_nu_std.dummy \
-stardict-dummy.dict  stardict-dummy.idx  stardict-dummy.ifo
+opt_nu.dsl opt_nu_std.dummy
